More functions exported

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,12 @@ export(SURVIVAL)
 export(el2cp)
 export(empd)
 export(empt)
+export(gen_next_events)
+export(gen_transition_times)
+export(gen_transition_times_exp)
 export(generateTasks)
+export(markovchain_transition_classifier)
+export(markovchain_transition_time_estimator)
 export(plot.cases.status.pie)
 export(plot.cases.table)
 export(plot.process.map)
