gener dependency removed

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,7 @@
 Package: promer
 Type: Package
 Title: This package will be a complete toolbox for process mining, management, prediction, simulation and optimization
-Imports: gener
-Version: 1.9.0
+Version: 1.9.2
 Date: 11 March 2021
 Author: Nicolas Berta
 Maintainer: Nicolas Berta <nicolas.berta@gmail.com>
@@ -11,8 +10,8 @@ License: MIT
 LazyData: TRUE
 RoxygenNote: 6.1.1
 Collate:
+    'dfgtools.R'
     'elsyd.R'
-    'mlmtools.R'
     'prom.R'
     'tsvis.R'
     'tstools.R'
@@ -23,6 +22,3 @@ Collate:
     'promvis.R'
     'survival.R'
     'survtools.R'
-    'transagent.R'
-    'transport.R'
-    'transtools.R'
