--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,8 +3,8 @@ Type: Package
 Title: This package will be a complete toolbox for process mining, management, prediction, simulation and optimization
 Version: 2.0.6
 Date: 05 August 2021
-Author: Nicolas Berta
-Maintainer: Nicolas Berta <nicolas.berta@gmail.com>
+Author: Nima Ramezani
+Maintainer: Nima Ramezani <nima.ramezani@gmail.com>
 Description: The package is still under construction. Documentation incomplete! Use at your own risk!
 License: Artistic-2.0
 LazyData: TRUE
