New article added: Montecarlo-simulatin

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,8 @@ export(TRANSYS)
 export(add_swf)
 export(el2cp)
 export(generateTasks)
+export(markovchain_transition_classifier)
+export(markovchain_transition_time_estimator)
 export(plot_cases_status_pie)
 export(plot_cases_table)
 export(plot_process_map)
@@ -19,7 +21,10 @@ export(plot_statuses_bar)
 export(plot_statuses_box)
 export(plot_traces_bar)
 export(plot_traces_sunburst)
+export(plot_transition_time_histogram)
 export(plot_volumes_area)
 export(simQueue)
 export(timeUnitCoeff)
 exportClasses(PROCESS)
+import(dplyr)
+import(rutils)
