--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -2,6 +2,10 @@ pandoc: 2.3.1
 pkgdown: 2.0.2
 pkgdown_sha: ~
 articles:
+  monte_carlo_simulation: monte_carlo_simulation.html
   process_visualisation: process_visualisation.html
-last_built: 2022-03-14T01:29Z
+last_built: 2022-04-06T02:22Z
+urls:
+  reference: https://genpack.github.io/rprom/reference
+  article: https://genpack.github.io/rprom/articles
 
