Process Simulation added and lots pf changes in filtering

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,15 @@
 Package: rprom
 Type: Package
 Title: This package will be a complete toolbox for process mining, management, prediction, simulation and optimization
-Version: 2.1.6
-Date: 05 April 2022
+Version: 2.2.7
+Date: 18 May 2022
 Author: Nima Ramezani
 Maintainer: Nima Ramezani <nima.ramezani@gmail.com>
 Description: The package is still under construction. Documentation incomplete! Use at your own risk!
 License: Artistic-2.0
 LazyData: TRUE
 RoxygenNote: 7.1.2
+Imports: dplyr, rutils
 Collate:
     'dfgtools.R'
     'elsyd.R'
