--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -2,10 +2,10 @@ pandoc: 2.3.1
 pkgdown: 2.0.2
 pkgdown_sha: ~
 articles:
-  monte_carlo_simulation: monte_carlo_simulation.html
+  process_simulation: process_simulation.html
   process_visualisation: process_visualisation.html
   random_walk: random_walk.html
-last_built: 2022-04-06T05:35Z
+last_built: 2022-05-19T00:25Z
 urls:
   reference: https://genpack.github.io/rprom/reference
   article: https://genpack.github.io/rprom/articles
