--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,10 +4,10 @@ S3method(summary,TransitionSystem)
 export(Survival)
 export(TransitionSystem)
 export(add_swf)
-export(dfg.historic)
-export(dfg_pack)
+export(dfg.historic.sliding)
 export(el2cp)
 export(generateTasks)
+export(generate_dynamic_features_pack)
 export(markovchain_transition_classifier)
 export(markovchain_transition_time_estimator)
 export(moving_aggregator)
@@ -29,4 +29,6 @@ export(simQueue)
 export(timeUnitCoeff)
 exportClasses(BusinessProcess)
 import(dplyr)
+import(magrittr)
+import(reshape2)
 import(rutils)
